# SFFileManagementKit

./: .PrivacyInfo.xcprivacy  .clang_tidy  .gitignore  .spi.yml  Brewfile  CMakeLists.txt  CONTRIBUTORS.md  Makefile  Package.resolved  Package.swift  README.md
.github/: pull_request_template.md
.github/workflows/: build.yml  generate_contributors.yml
.swiftpm/configuration/: Package.resolved
Sources/SFFileCore/: CMakeLists.txt  PrivacyInfo.xcprivacy
Sources/SFFileCore/include/: SFCDebugMacros.cpp  SFCDebugMacros.h  SFCException.cpp  SFCException.hpp  SFCMacros.h
Sources/SFFileCore/include/libc/: SFCFileOperations.h  fssec.h  keychh.h  wtcd.h
Sources/SFFileCore/libc/: fssec.c
Sources/SFFileCore/libc/fs/: SFCFileOperations.c  SFCFileOperations.h
Sources/SFFileCore/libc/keychh/: keychh.c
Sources/SFFileCore/libc/scwtcdog/: wtcd.c
Sources/SFFileCore/libcxx/CompressionModule/: compmod.cpp  compmod.hpp
Sources/SFFileCoreASM/: CMakeLists.txt  PrivacyInfo.xcprivacy  crc32.c  crc32_arm64.S  crc32_arm64.asm  crc32_asm.S  crc32_x86.S  crc32_x86.asm
Sources/SFFileCoreASM/include/: crc32.h
Sources/SFFileCoreBridge/: CMakeLists.txt  placeholder.mm  plch.mm
Sources/SFFileCxxCore/include/: SFCDocumentManager.h  SFCxxCompressionModule.hpp  SFCxxConstants.hpp  fssec.h
Sources/SFFileCxxCore/libc/fs/: SFCFileOperations.c  SFCFileOperations.h
Sources/SFFileCxxCore/libcxx/CompressionModule/: SFCxxCompressionModule.cpp
Sources/SFFileCxxCore/libcxx/fs/: SFCxxJSONBridge.cpp
Sources/SFFileManagementKit/: CMakeLists.txt  SFKeychainHelper.swift
Sources/SFFileManagementKit/Documentation.docc/: Documentation.md
Sources/_SFCxxUtils/: SFCxxJSON.cpp
Sources/_SFCxxUtils/include/: SFCxxJSON.h
Sources/_SFUtils/: CMakeLists.txt  SFCxxBase64.cpp  SFCxxJSON.cpp
Sources/_SFUtils/Project.xcodeproj/: project.pbxproj
Sources/_SFUtils/include/: SFCJSON.h  SFCXML.h  SFCxxBase64.h  SFCxxJSON.h  SFCxxLogger.h
Tests/Benchmarks/: CMakeLists.txt  main.c
Tests/Benchmarks/include/: bchinclude.h  bchsuite.h  bench.h
Tests/SFFileManagementKitTests/: SFFileManagementKitTests.swift
docs/: benchmarking.md
scripts/: benchmark.sh  build.sh  clean_build.sh  generate_contributors_list.sh
